# fwlib

./: .clang-format  .gitignore  PROJECT_INTEGRATION_SUMMARY.md  README.md
.github/workflows/: README.md  build-and-release.yml  ci.yml  cmake.yml  focasmonitor-ci.yml  quality.yml  release.yml.disabled  test-pr.yml  windows-cmake.yml
examples/c/: .gitignore  BUILD_WINDOWS.md  CMakeLists.txt  DEVELOPMENT_PROGRESS.md  DEVELOPMENT_ROADMAP.md  GITIGNORE_SUMMARY.md  MULTI_MACHINE_RESEARCH.md  Makefile.linux  RELEASE_NOTES.md  WINDOWS_BUILD_SUMMARY.md  build-config.env  build-windows.sh  check-environment.sh  machines.txt  mingw-toolchain.cmake
examples/c-minimal/: main.c
examples/c/src/: CMakeLists.txt  config.c  config.h  connection_pool.c  connection_pool.h  machine_info.c  machine_info.h  main.c  multi_machine_demo.c  util.c  util.h
focasmonitor/: CMakeLists.txt  DEPLOYMENT.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_SUMMARY.md  LICENSE  Makefile  README.md  build.sh  machines.txt
focasmonitor/research/: MULTI_MACHINE_RESEARCH.md
focasmonitor/src/: connection_pool.c  focasmonitor.h  main.c  output.c
